i fixed the weird landing page navbar spacing but sacrificed my font being small

--- a/src/Main.css
+++ b/src/Main.css
@@ -26,7 +26,7 @@ body {
 }
 
  .display-1 {
-  font-size: 7rem;
+  font-size: 4rem;
  }
 
 #root {
