--- a/src/NavBarStyle.css
+++ b/src/NavBarStyle.css
@@ -2,6 +2,7 @@
     background-color: #18261bc0;
     color: #f6f4e6;
     text-decoration: none;
+    width: 100%;
 }
 .navbar-brand {
     color: #f6f4e6;
